penyesuaian
